1.0.10 (Build 2021081600)
- fixed issue with array_key_exists on php 8

1.0.9 (Build 2021061400)
- Fixed issue with Group grading
- Added view attempt button to grades page
- Added options to how many students to show on grading page

1.0.8 (Build 2021053100)
- Internal flag for iframe use

1.0.7 (Build 2021053500)
- Added ability to view reports by group

1.0.6 (Build 2021041100)
- Fixed a bug in the teacher eval section of reports (thanks Hideto)

1.0.5 (Build 2021030600)
-Improved layout of form and added an optional setup tab
-added string for capability 'grade'

1.0.4 (Build 2021022200)
-Add options for TTS prompt and better display of media prompt items on form

1.0.3 (Build 2021021800)
- Improved layout of results and added better stuff to prevent a user prematurely leaving the recording page.

1.0.2 (Build 2021021200)
- Simplified placeholder screen
- Made target word count visible to students

1.0.1 (Build 2021020600)
- Improved differencing
- Improved Unicode processing in diff
- Language string updates
- Improved final results page1

1.0.0 (Build 2021011000)
-Added simple grading method