@@ -1,5 +1,6 @@
 1.0.10 (Build 2021081600)
 - fixed issue with array_key_exists on php 8
+- fixed some bad instructions and missing description text
 
 1.0.9 (Build 2021061400)
 - Fixed issue with Group grading
